test(e2e),docs: cover the new surfaces and retire the stale review documents feat(web): move deals, documents, flatmates, plans, rent, services and KYC onto the API feat(api): personal document vault, managed properties, and plan entitlements